// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Texte /> renders with a title 1`] = `
.c2 {
  padding: 1.25rem 0;
}

.c4 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  border-color: #c9d3df;
  background-color: #ebeff3;
}

.c4 > *:first-child {
  margin-top: 0;
}

.c4 > *:last-child {
  margin-bottom: 0;
}

.c5 {
  font-size: 0.875rem;
}

.c6 {
  display: block;
  padding: 0.25rem 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6:hover {
  font-weight: bold;
}

.c3 {
  max-height: 100%;
  overflow: auto;
}

.c10 {
  margin-bottom: 0.625rem;
  font-style: italic;
  font-weight: bold;
  font-size: 1em;
}

.c11 {
  margin-bottom: 0.625rem;
}

.c9 {
  font-size: 1.625rem;
}

.c8 {
  margin-top: 0;
  margin-bottom: 2rem;
}

@media (max-width:600px) {
  .c4 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c4 {
    border: none;
    padding: 0 5pt;
  }
}

@media (min-width:980px) {
  .c1 {
    -webkit-flex: 0 1 35%;
    -ms-flex: 0 1 35%;
    flex: 0 1 35%;
    position: -webkit-sticky;
    position: sticky;
    top: 0px;
    max-height: 100vh;
    padding-right: 1.25rem;
  }
}

@media (min-width:980px) {
  .c7 {
    -webkit-flex: 0 1 65%;
    -ms-flex: 0 1 65%;
    flex: 0 1 65%;
    overflow: scroll;
  }
}

@media (min-width:980px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1 c2"
    >
      <div
        class="c3 c4"
      >
        <ol>
          <li
            class="c5"
          >
            <a
              class="c6"
              href="#KALISCTA000038524044"
            >
              Préambule
            </a>
          </li>
          <li
            class="c5"
          >
            <a
              class="c6"
              href="#KALISCTA000038524045"
            >
              Titre Ier Clauses générales
               
              ▼
            </a>
          </li>
        </ol>
      </div>
    </div>
    <div
      class="c7 c2"
    >
      <h2
        class="c8"
      >
        This title must be in snapshot
      </h2>
      <h3
        class="c9"
        id="KALISCTA000038524044"
      >
        Préambule
      </h3>
      <div
        class="c10"
      >
        Article non étendu
      </div>
      <div
        class="c11"
      >
        <p>
          OK
        </p>
      </div>
      <h3
        class="c9"
        id="KALISCTA000038524045"
      >
        Titre Ier Clauses générales
      </h3>
      <div
        class="c10"
      >
        Article non étendu
      </div>
      <h5
        id="KALIARTI000038524073"
      >
        Commission paritaire nationale de l'emploi
      </h5>
      <div
        class="c11"
      >
        <p>
          OK
        </p>
      </div>
      <div
        class="c10"
      >
        Article non étendu
      </div>
      <div
        class="c11"
      >
        <p>
          OK
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Texte /> renders without a title 1`] = `
.c2 {
  padding: 1.25rem 0;
}

.c4 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  border-color: #c9d3df;
  background-color: #ebeff3;
}

.c4 > *:first-child {
  margin-top: 0;
}

.c4 > *:last-child {
  margin-bottom: 0;
}

.c5 {
  font-size: 0.875rem;
}

.c6 {
  display: block;
  padding: 0.25rem 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6:hover {
  font-weight: bold;
}

.c3 {
  max-height: 100%;
  overflow: auto;
}

.c9 {
  margin-bottom: 0.625rem;
  font-style: italic;
  font-weight: bold;
  font-size: 1em;
}

.c10 {
  margin-bottom: 0.625rem;
}

.c8 {
  font-size: 1.625rem;
}

@media (max-width:600px) {
  .c4 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c4 {
    border: none;
    padding: 0 5pt;
  }
}

@media (min-width:980px) {
  .c1 {
    -webkit-flex: 0 1 35%;
    -ms-flex: 0 1 35%;
    flex: 0 1 35%;
    position: -webkit-sticky;
    position: sticky;
    top: 0px;
    max-height: 100vh;
    padding-right: 1.25rem;
  }
}

@media (min-width:980px) {
  .c7 {
    -webkit-flex: 0 1 65%;
    -ms-flex: 0 1 65%;
    flex: 0 1 65%;
    overflow: scroll;
  }
}

@media (min-width:980px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1 c2"
    >
      <div
        class="c3 c4"
      >
        <ol>
          <li
            class="c5"
          >
            <a
              class="c6"
              href="#KALISCTA000038524044"
            >
              Préambule
            </a>
          </li>
          <li
            class="c5"
          >
            <a
              class="c6"
              href="#KALISCTA000038524045"
            >
              Titre Ier Clauses générales
               
              ▼
            </a>
          </li>
        </ol>
      </div>
    </div>
    <div
      class="c7 c2"
    >
      <h3
        class="c8"
        id="KALISCTA000038524044"
      >
        Préambule
      </h3>
      <div
        class="c9"
      >
        Article non étendu
      </div>
      <div
        class="c10"
      >
        <p>
          OK
        </p>
      </div>
      <h3
        class="c8"
        id="KALISCTA000038524045"
      >
        Titre Ier Clauses générales
      </h3>
      <div
        class="c9"
      >
        Article non étendu
      </div>
      <h5
        id="KALIARTI000038524073"
      >
        Commission paritaire nationale de l'emploi
      </h5>
      <div
        class="c10"
      >
        <p>
          OK
        </p>
      </div>
      <div
        class="c9"
      >
        Article non étendu
      </div>
      <div
        class="c10"
      >
        <p>
          OK
        </p>
      </div>
    </div>
  </div>
</div>
`;
